--- a/.gitignore
+++ b/.gitignore
@@ -287,11 +287,13 @@ __pycache__/
 *.odx.cs
 *.xsd.cs
 
-# code coverage
-ClassicBasic_coverage.xml
-/ClassicBasic/ClassicBasic.xml
-/ClassicBasic.Interpreter/ClassicBasic.Interpreter.xml
-/ClassicBasic.Test/ClassicBasic.Test.xml
+# Output files
 Tools/NibReader/D000.bin
 Tools/NibReader/CPMBoot.bin
 Tools/NibReader/CPMLDR.bin
+*.BAK
+# CPM editors (I'm using Turbo pascal)
+# easiest to just copy them into the working folder
+# But best not to add them to git.
+TINST.*
+TURBO.*
