--- a/.gitignore
+++ b/.gitignore
@@ -288,12 +288,15 @@ __pycache__/
 *.xsd.cs
 
 # Output files
-Tools/NibReader/D000.bin
-Tools/NibReader/CPMBoot.bin
-Tools/NibReader/CPMLDR.bin
+Tools/NibReader/*.bin
+# Don't want assembler listings
 *.BAK
+*.PRN
+# Ignore the loader BIOS output from assembly
+LDRBIOS.REL
 # CPM editors (I'm using Turbo pascal)
 # easiest to just copy them into the working folder
 # But best not to add them to git.
 TINST.*
 TURBO.*
+
