--- a/.gitignore
+++ b/.gitignore
@@ -296,6 +296,7 @@ Tools/NibReader/*.bin
 # Ignore the loader BIOS output from assembly
 src/boot/LDRBIOS.REL
 src/boot/CPMLDR.COM
+src/cpm3sys/
 # CPM editors (I'm using Turbo pascal)
 # easiest to just copy them into the working folder
 # But best not to add them to git.
