--- a/.gitignore
+++ b/.gitignore
@@ -289,6 +289,7 @@ __pycache__/
 
 # Output files
 Tools/NibReader/*.bin
+Tools/NibReader/CPM3.SYS
 # Don't want assembler listings or turbo pascal backup files
 *.BAK
 *.PRN
