Added patched M80 with 6502 support Removed M80 with no 6502 support. Added bootsector source code Modified NibReader Added Bootsector to build Added file comparison to build script.

--- a/.gitignore
+++ b/.gitignore
@@ -295,8 +295,11 @@ Tools/NibReader/CPM3.SYS
 *.PRN
 *.SYM
 # Ignore the loader BIOS output from assembly
+src/boot/BOOTSECT.REL
 src/boot/LDRBIOS.REL
 src/boot/CPMLDR.COM
+src/boot/BOOTSECT.COM
+src/boot/*.bin
 src/cpm3sys/
 # CPM editors (I'm using Turbo pascal)
 # easiest to just copy them into the working folder
