--- a/.gitignore
+++ b/.gitignore
@@ -297,8 +297,8 @@ Tools/NibReader/CPM3.SYS
 # Ignore the loader BIOS output from assembly
 src/boot/BOOTSECT.REL
 src/boot/LDRBIOS.REL
-src/boot/CPMLDR.COM
-src/boot/BOOTSECT.COM
+src/boot/TOOLKEY.REL
+src/boot/*.COM
 src/boot/*.bin
 src/cpm3sys/
 # CPM editors (I'm using Turbo pascal)
