--- a/.gitignore
+++ b/.gitignore
@@ -298,8 +298,10 @@ Tools/NibReader/CPM3.SYS
 src/boot/BOOTSECT.REL
 src/boot/LDRBIOS.REL
 src/boot/TOOLKEY.REL
+src/boot/D000.REL
 src/boot/*.COM
 src/boot/*.bin
+src/boot/*.$$$
 src/cpm3sys/
 # CPM editors (I'm using Turbo pascal)
 # easiest to just copy them into the working folder
