--- a/.gitignore
+++ b/.gitignore
@@ -296,6 +296,8 @@ Tools/NibReader/CPM3.SYS
 *.SYM
 # Ignore the loader BIOS output from assembly
 src/boot/BOOTSECT.REL
+src/boot/BIOSDISK.REL
+src/boot/BIOSVID.REL
 src/boot/LDRBIOS.REL
 src/boot/TOOLKEY.REL
 src/boot/D000.REL
