--- a/.gitignore
+++ b/.gitignore
@@ -305,7 +305,8 @@ src/boot/D000.REL
 src/boot/*.COM
 src/boot/*.bin
 src/boot/*.$$$
-src/cpm3sys/
+src/boot/D000.REL
+src/cpm3bios/BIOS.REL
 # CPM editors (I'm using Turbo pascal)
 # easiest to just copy them into the working folder
 # But best not to add them to git.
