--- a/.gitignore
+++ b/.gitignore
@@ -295,9 +295,21 @@ Tools/NibReader/CPM3.SYS
 *.PRN
 *.SYM
 # Ignore the loader BIOS output from assembly
+src/boot/BOOTSECT.REL
+src/boot/BIOSDISK.REL
+src/boot/BIOSCHAR.REL
+src/boot/BIOSVID.REL
 src/boot/LDRBIOS.REL
-src/boot/CPMLDR.COM
-src/cpm3sys/
+src/boot/TOOLKEY.REL
+src/boot/D000.REL
+src/boot/*.COM
+src/boot/*.bin
+src/boot/*.$$$
+src/boot/D000.REL
+src/cpm3bios/BIOS.REL
+src/cpm3bios/SCB.REL
+src/cpm3bios/BNKBIOS3.SPR
+src/cpm3bios/*.$$$
 # CPM editors (I'm using Turbo pascal)
 # easiest to just copy them into the working folder
 # But best not to add them to git.
