Added CPM3.SYS to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -309,6 +309,7 @@ src/boot/D000.REL
 src/cpm3bios/BIOS.REL
 src/cpm3bios/SCB.REL
 src/cpm3bios/BNKBIOS3.SPR
+src/cpm3bios/CPM3.SYS
 src/cpm3bios/*.$$$
 # CPM editors (I'm using Turbo pascal)
 # easiest to just copy them into the working folder
