--- a/.gitignore
+++ b/.gitignore
@@ -295,22 +295,18 @@ Tools/NibReader/CPM3.SYS
 *.PRN
 *.SYM
 # Ignore the loader BIOS output from assembly
-src/OEM/boot/BOOTSECT.REL
-src/OEM/boot/BIOSDISK.REL
-src/OEM/boot/BIOSCHAR.REL
-src/OEM/boot/BIOSVID.REL
-src/OEM/boot/LDRBIOS.REL
-src/OEM/boot/TOOLKEY.REL
-src/OEM/boot/*.COM
-src/OEM/boot/*.BIN
-src/OEM/boot/*.$$$
-src/OEM/boot/*.LOG
-src/OEM/boot/comparison/*
-src/OEM/cpm3bios/BIOS.REL
-src/OEM/cpm3bios/SCB.REL
-src/OEM/cpm3bios/BNKBIOS3.SPR
-src/OEM/cpm3bios/CPM3.SYS
-src/OEM/cpm3bios/*.$$$
+src/OEM/BOOTSECT.REL
+src/OEM/BIOSDISK.REL
+src/OEM/BIOSCHAR.REL
+src/OEM/BIOSVID.REL
+src/OEM/LDRBIOS.REL
+src/OEM/TOOLKEY.REL
+src/OEM/*.COM
+src/OEM/*.BIN
+src/OEM/*.$$$
+src/OEM/*.LOG
+src/OEM/comparison/*
+src/OEM/binaries/*
 # CPM editors (I'm using Turbo pascal)
 # easiest to just copy them into the working folder
 # But best not to add them to git.
