GENCPM.COM now produces the correct binaries (#6)
* Testing out cpmgen

* Minor tweaks to fix some bugs/typos

* Fixed up a questionable change while comparing output files

* removed CPM3.SYS from BIOS folder

* Added CPM3.SYS to ignore

* Figured out why we don't get asked memory bank questions

* Nearly correct binary match just need to tweak serial number

* Patched SPR files to have correct serial number

* Added a bunch of comments

* Bit of cleanup of build process

* Moved OEM code into a new directory

* Restructuring OEM folder

* Now builds the OEM binaries

* Tweaked build.ps1

* Updated src/readme.md to reflect current status

* Finished tweaking readme.md

--- a/.gitignore
+++ b/.gitignore
@@ -295,21 +295,18 @@ Tools/NibReader/CPM3.SYS
 *.PRN
 *.SYM
 # Ignore the loader BIOS output from assembly
-src/boot/BOOTSECT.REL
-src/boot/BIOSDISK.REL
-src/boot/BIOSCHAR.REL
-src/boot/BIOSVID.REL
-src/boot/LDRBIOS.REL
-src/boot/TOOLKEY.REL
-src/boot/D000.REL
-src/boot/*.COM
-src/boot/*.bin
-src/boot/*.$$$
-src/boot/D000.REL
-src/cpm3bios/BIOS.REL
-src/cpm3bios/SCB.REL
-src/cpm3bios/BNKBIOS3.SPR
-src/cpm3bios/*.$$$
+src/OEM/BOOTSECT.REL
+src/OEM/BIOSDISK.REL
+src/OEM/BIOSCHAR.REL
+src/OEM/BIOSVID.REL
+src/OEM/LDRBIOS.REL
+src/OEM/TOOLKEY.REL
+src/OEM/*.COM
+src/OEM/*.BIN
+src/OEM/*.$$$
+src/OEM/*.LOG
+src/OEM/comparison/*
+src/OEM/binaries/*
 # CPM editors (I'm using Turbo pascal)
 # easiest to just copy them into the working folder
 # But best not to add them to git.
