--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,16 +18,30 @@
             "stopAtEntry": false
         },
         {
-            // Use IntelliSense to find out which attributes exist for C# debugging
-            // Use hover for the description of the existing attributes
-            // For further information visit https://github.com/dotnet/vscode-csharp/blob/main/debugger-launchjson.md
             "name": "BIOS Sys Dump",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/Tools/CPM3SYSDump/bin/Debug/net8.0/CPM3SYSDump.dll",
-            "args": ["${workspaceFolder}/src/cpm3bios/CPM3.SYS"],
+            "args": ["${workspaceFolder}/src/OEM/comparison/CPM3.SYS"],
+            "cwd": "${workspaceFolder}/Tools/CPM3SYSDump",
+            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
+            "name": "Generate DSK",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/Tools/GenDsk/bin/Debug/net8.0/GenDsk.dll",
+            "args": [
+                "create",
+                "--binaries-folder","${workspaceFolder}/src/OEM/binaries/",
+                "--destination-disk","${workspaceFolder}/src/OEM/binaries/BLANK.DSK",
+            ],
             "cwd": "${workspaceFolder}/Tools/CPM3SYSDump",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
