--- a/.gitignore
+++ b/.gitignore
@@ -307,6 +307,7 @@ src/OEM/*.$$$
 src/OEM/*.LOG
 src/OEM/comparison/*
 src/OEM/binaries/*
+src/OEM/system/*
 # CPM editors (I'm using Turbo pascal)
 # easiest to just copy them into the working folder
 # But best not to add them to git.
