Start of COPYSYS code

--- a/.gitignore
+++ b/.gitignore
@@ -303,6 +303,7 @@ src/OEM/LDRBIOS.REL
 src/OEM/TOOLKEY.REL
 src/OEM/BIOS.REL
 src/OEM/SCB.REL
+src/OEM/COPYSYS.REL
 src/OEM/START.REL
 src/OEM/*.COM
 src/OEM/*.BIN
