--- a/.gitignore
+++ b/.gitignore
@@ -312,6 +312,24 @@ src/OEM/*.LOG
 src/OEM/comparison/*
 src/OEM/binaries/*
 src/OEM/system/*
+# patched folder
+src/patched/BOOTSECT.REL
+src/patched/BIOSDISK.REL
+src/patched/BIOSCHAR.REL
+src/patched/BIOSVID.REL
+src/patched/LDRBIOS.REL
+src/patched/TOOLKEY.REL
+src/patched/BIOS.REL
+src/patched/SCB.REL
+src/patched/COPYSYS.REL
+src/patched/START.REL
+src/patched/*.COM
+src/patched/*.BIN
+src/patched/*.$$$
+src/patched/*.LOG
+src/patched/binaries/*
+src/patched/system/*
+src/patched/utilty/*
 # CPM editors (I'm using Turbo pascal)
 # easiest to just copy them into the working folder
 # But best not to add them to git.
