--- a/.gitignore
+++ b/.gitignore
@@ -329,7 +329,7 @@ src/patched/*.$$$
 src/patched/*.LOG
 src/patched/binaries/*
 src/patched/system/*
-src/patched/utilty/*
+src/patched/utility/*
 # CPM editors (I'm using Turbo pascal)
 # easiest to just copy them into the working folder
 # But best not to add them to git.
