--- a/.gitignore
+++ b/.gitignore
@@ -305,6 +305,7 @@ src/OEM/BIOS.REL
 src/OEM/SCB.REL
 src/OEM/COPYSYS.REL
 src/OEM/START.REL
+src/OEM/SDT.REL
 src/OEM/*.COM
 src/OEM/*.BIN
 src/OEM/*.$$$
@@ -323,6 +324,7 @@ src/patched/BIOS.REL
 src/patched/SCB.REL
 src/patched/COPYSYS.REL
 src/patched/START.REL
+src/patched/SDT.REL
 src/patched/*.COM
 src/patched/*.BIN
 src/patched/*.$$$
