--- a/.gitignore
+++ b/.gitignore
@@ -306,6 +306,8 @@ src/OEM/SCB.REL
 src/OEM/COPYSYS.REL
 src/OEM/START.REL
 src/OEM/SDT.REL
+src/OEM/MPATCH.REL
+src/OEM/GPATCH.REL
 src/OEM/*.COM
 src/OEM/*.BIN
 src/OEM/*.$$$
@@ -325,6 +327,8 @@ src/patched/SCB.REL
 src/patched/COPYSYS.REL
 src/patched/START.REL
 src/patched/SDT.REL
+src/patched/MPATCH.REL
+src/patched/GPATCH.REL
 src/patched/*.COM
 src/patched/*.BIN
 src/patched/*.$$$
