--- a/.gitignore
+++ b/.gitignore
@@ -337,6 +337,9 @@ src/patched/*.LOG
 src/patched/binaries/*
 src/patched/system/*
 src/patched/utility/*
+src/mappertest/MAPTEST.REL
+src/mappertest/maptest.dsk
+src/mappertest/MAPTEST.COM
 # CPM editors (I'm using Turbo pascal)
 # easiest to just copy them into the working folder
 # But best not to add them to git.
