--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -144,6 +144,21 @@
             "console": "internalConsole",
             "stopAtEntry": false
         },
+	{
+		"name": "AsmFmt maptest",
+		"type": "coreclr",
+		"request": "launch",
+		"preLaunchTask": "build",
+		// If you have changed target frameworks, make sure to update the program path.
+		"program": "${workspaceFolder}/Tools/asmfmt/bin/Debug/net8.0/asmfmt.dll",
+		"args": [
+		    "${workspaceFolder}/src/mappertest/*.MAC"
+		],
+		"cwd": "${workspaceFolder}/Tools/asmfmt/bin/Debug/net8.0",
+		// For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+		"console": "internalConsole",
+		"stopAtEntry": false
+	    },
         {
             "name": ".NET Core Attach",
             "type": "coreclr",
