--- a/.gitignore
+++ b/.gitignore
@@ -340,6 +340,8 @@ src/patched/utility/*
 src/mappertest/MAPTEST.REL
 src/mappertest/maptest.dsk
 src/mappertest/MAPTEST.COM
+src/dpbtest/DPBTEST.REL
+src/dpbtest/DPBTEST.COM
 # CPM editors (I'm using Turbo pascal)
 # easiest to just copy them into the working folder
 # But best not to add them to git.
