--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -158,7 +158,22 @@
 		// For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
 		"console": "internalConsole",
 		"stopAtEntry": false
-	    },
+        },
+	{
+		"name": "AsmFmt dpbtest",
+		"type": "coreclr",
+		"request": "launch",
+		"preLaunchTask": "build",
+		// If you have changed target frameworks, make sure to update the program path.
+		"program": "${workspaceFolder}/Tools/asmfmt/bin/Debug/net8.0/asmfmt.dll",
+		"args": [
+		    "${workspaceFolder}/src/dpbtest/*.MAC"
+		],
+		"cwd": "${workspaceFolder}/Tools/asmfmt/bin/Debug/net8.0",
+		// For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+		"console": "internalConsole",
+		"stopAtEntry": false
+	},
         {
             "name": ".NET Core Attach",
             "type": "coreclr",
