--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,11 @@
 		"editor.insertSpaces": true,
 		"editor.maxTokenizationLineLength": 2500,
 		"editor.inlineSuggest.suppressSuggestions": false
+	},
+	"[jsonc]": {
+		"editor.tabSize":4,
+		"editor.insertSpaces": true,
+		"editor.maxTokenizationLineLength": 2500,
+		"editor.inlineSuggest.suppressSuggestions": false
 	}
 }
