--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -152,9 +152,11 @@
             "program": "${workspaceFolder}/Tools/CpmDsk/bin/Debug/net8.0/CpmDsk.dll",
             "args": [
                 "add",
-                "${workspaceFolder}/src/patched/binaries/CPM3.SYS",
+                "${workspaceFolder}/src/patched/build.sub",
                 "--disk-image",
                 "${workspaceFolder}/src/patched/binaries/cpm3.hdv",
+                "--usernum",
+                "1"
             ],
             "cwd": "${workspaceFolder}/Tools/CpmDsk/bin/Debug/net8.0",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
