--- a/.gitignore
+++ b/.gitignore
@@ -330,6 +330,7 @@ src/patched/START.REL
 src/patched/SDT.REL
 src/patched/MPATCH.REL
 src/patched/GPATCH.REL
+src/patched/PUTSYS.REL
 src/patched/*.COM
 src/patched/*.BIN
 src/patched/*.$$$
@@ -340,6 +341,8 @@ src/patched/utility/*
 src/mappertest/MAPTEST.REL
 src/mappertest/maptest.dsk
 src/mappertest/MAPTEST.COM
+src/dpbtest/DPBTEST.REL
+src/dpbtest/DPBTEST.COM
 # CPM editors (I'm using Turbo pascal)
 # easiest to just copy them into the working folder
 # But best not to add them to git.
