--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,9 @@
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/Tools/NibReader/bin/Debug/net8.0/NibReader.dll",
-            "args": ["${workspaceFolder}/DiskImages/BlankBootableCPM3.nib"],
+            "args": [
+                "${workspaceFolder}/DiskImages/BlankBootableCPM3.nib"
+            ],
             "cwd": "${workspaceFolder}/Tools/NibReader",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
@@ -24,7 +26,9 @@
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/Tools/CPM3SYSDump/bin/Debug/net8.0/CPM3SYSDump.dll",
-            "args": ["${workspaceFolder}/src/OEM/comparison/CPM3.SYS"],
+            "args": [
+                "${workspaceFolder}/src/OEM/comparison/CPM3.SYS"
+            ],
             "cwd": "${workspaceFolder}/Tools/CPM3SYSDump",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
@@ -39,8 +43,10 @@
             "program": "${workspaceFolder}/Tools/CpmDsk/bin/Debug/net8.0/CpmDsk.dll",
             "args": [
                 "create",
-                "--binaries-folder","${workspaceFolder}/src/OEM/binaries/",
-                "--disk-image","${workspaceFolder}/src/OEM/binaries/SYSTEM.DSK",
+                "--binaries-folder",
+                "${workspaceFolder}/src/patched/binaries/",
+                "--disk-image",
+                "${workspaceFolder}/src/patched/binaries/system.dsk",
             ],
             "cwd": "${workspaceFolder}/Tools/CpmDsk/bin/Debug/net8.0",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
@@ -56,7 +62,27 @@
             "program": "${workspaceFolder}/Tools/CpmDsk/bin/Debug/net8.0/CpmDsk.dll",
             "args": [
                 "directory",
-                "--disk-image","${workspaceFolder}/DiskImages/CIRTECH CPM PLUS SYSTEM.DSK",
+                "--disk-image",
+                "${workspaceFolder}/DiskImages/0030_Cirtech_CPM_Plus_System_Master.po",
+            ],
+            "cwd": "${workspaceFolder}/Tools/CpmDsk/bin/Debug/net8.0",
+            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
+            "name": "User 1 Directory DSK",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/Tools/CpmDsk/bin/Debug/net8.0/CpmDsk.dll",
+            "args": [
+                "directory",
+                "--user",
+                "1",
+                "--disk-image",
+                "${workspaceFolder}/DiskImages/0030_Cirtech_CPM_Plus_System_Master.po",
             ],
             "cwd": "${workspaceFolder}/Tools/CpmDsk/bin/Debug/net8.0",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
@@ -74,7 +100,28 @@
                 "directory",
                 "P??.*",
                 "C*.COM",
-                "--disk-image","${workspaceFolder}/DiskImages/CIRTECH CPM PLUS SYSTEM.DSK",
+                "--disk-image",
+                "${workspaceFolder}/DiskImages/CIRTECH CPM PLUS SYSTEM.DSK",
+            ],
+            "cwd": "${workspaceFolder}/Tools/CpmDsk/bin/Debug/net8.0",
+            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
+            "name": "User 1 Filter Directory",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/Tools/CpmDsk/bin/Debug/net8.0/CpmDsk.dll",
+            "args": [
+                "directory",
+                "*.PRN",
+                "--disk-image",
+                "${workspaceFolder}/DiskImages/buildcpm3.hdv",
+                "--user",
+                "1"
             ],
             "cwd": "${workspaceFolder}/Tools/CpmDsk/bin/Debug/net8.0",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
@@ -90,7 +137,8 @@
             "program": "${workspaceFolder}/Tools/CpmDsk/bin/Debug/net8.0/CpmDsk.dll",
             "args": [
                 "extract",
-                "--disk-image","${workspaceFolder}/DiskImages/CIRTECH CPM PLUS SYSTEM.DSK",
+                "--disk-image",
+                "${workspaceFolder}/DiskImages/CIRTECH CPM PLUS SYSTEM.DSK",
             ],
             "cwd": "${workspaceFolder}/Tools/CpmDsk/bin/Debug/net8.0",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
@@ -107,7 +155,23 @@
             "args": [
                 "add",
                 "${workspaceFolder}/src/OEM/system/*.*",
-                "--disk-image","${workspaceFolder}/src/OEM/binaries/SYSTEM.DSK",
+                "--disk-image",
+                "${workspaceFolder}/src/OEM/binaries/SYSTEM.DSK",
+            ],
+            "cwd": "${workspaceFolder}/Tools/CpmDsk/bin/Debug/net8.0",
+            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
+            "name": "DPB Test",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/Tools/CpmDsk/bin/Debug/net8.0/CpmDsk.dll",
+            "args": [
+                "dpbtest",
             ],
             "cwd": "${workspaceFolder}/Tools/CpmDsk/bin/Debug/net8.0",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
@@ -129,7 +193,7 @@
             "console": "internalConsole",
             "stopAtEntry": false
         },
-	{
+        {
             "name": "AsmFmt Patched",
             "type": "coreclr",
             "request": "launch",
@@ -144,21 +208,36 @@
             "console": "internalConsole",
             "stopAtEntry": false
         },
-	{
-		"name": "AsmFmt maptest",
-		"type": "coreclr",
-		"request": "launch",
-		"preLaunchTask": "build",
-		// If you have changed target frameworks, make sure to update the program path.
-		"program": "${workspaceFolder}/Tools/asmfmt/bin/Debug/net8.0/asmfmt.dll",
-		"args": [
-		    "${workspaceFolder}/src/mappertest/*.MAC"
-		],
-		"cwd": "${workspaceFolder}/Tools/asmfmt/bin/Debug/net8.0",
-		// For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
-		"console": "internalConsole",
-		"stopAtEntry": false
-	    },
+        {
+            "name": "AsmFmt maptest",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/Tools/asmfmt/bin/Debug/net8.0/asmfmt.dll",
+            "args": [
+                "${workspaceFolder}/src/mappertest/*.MAC"
+            ],
+            "cwd": "${workspaceFolder}/Tools/asmfmt/bin/Debug/net8.0",
+            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
+            "name": "AsmFmt dpbtest",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/Tools/asmfmt/bin/Debug/net8.0/asmfmt.dll",
+            "args": [
+                "${workspaceFolder}/src/dpbtest/*.MAC"
+            ],
+            "cwd": "${workspaceFolder}/Tools/asmfmt/bin/Debug/net8.0",
+            // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
         {
             "name": ".NET Core Attach",
             "type": "coreclr",
